err2.txt

tests\test_errors.kix:
error: Undeclared variable: 'val'
  --> tests\test_errors.kix:26
   |
26 |     Some(val) => println(val)
   |          ^^^
  1 error(s) in Symbol Resolution

error[E0000]: aborting due to previous error(s)
  Kinetix v0.0.7 (Dev)
  For more information, open an issue: https://github.com/MisterY3515/Kinetix/issues

